更改個人技能

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                                 我會的東西
                             </div>
                         </h5>
-                        <div class="ts grid">
+                        <div class="ts stackable grid">
                             <div class="six wide column">
                                 <h1 class="skilltext" class="ts header">Python</h1>
                                 <div id="python_circle">
@@ -77,12 +77,12 @@
                             </div>
                             <div class="four wide column"></div>
                             <div class="six wide column">
-                                <h1 class="skilltext" class="ts header">C#</h1>
-                                <div id="csharp_circle">
-                                    <strong></strong>
-                                </div>
                                 <h1 class="skilltext" class="ts header">Node.JS</h1>
                                 <div id="nodejs_circle">
+                                    <strong></strong>
+                                </div>
+                                <h1 class="skilltext" class="ts header">Kotlin</h1>
+                                <div id="kotlin_circle">
                                     <strong></strong>
                                 </div>
                             </div>
