--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
 				<h2 class="major">Contact</h2>
 				<ul class="icons">
 					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="https://github.com/WoodManGitHub" class="icon brands fa-github"><span
-								class="label">GitHub</span></a></li>
+					<li><a href="https://github.com/WoodManGitHub" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 				</ul>
 			</article>
 
