--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<meta name="author" content="WoodMan" />
+	<meta name="description" content="一顆熱愛程式、資訊、科技的木頭" />
+	<meta name="keywords" content="woodman,木頭人,木人,woodmangithub" />
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	<script src="https://www.amcharts.com/lib/4/core.js"></script>
 	<script src="https://www.amcharts.com/lib/4/charts.js"></script>
 	<script src="https://www.amcharts.com/lib/4/themes/dark.js"></script>
