--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<!-- info -->
 	<title>About Me - WoodMan</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -10,6 +11,8 @@
 	<meta name="description" content="一顆熱愛程式、資訊、科技的木頭" />
 	<meta name="keywords" content="woodman,木頭人,木人,woodmangithub" />
 	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+	<!-- Skill JS -->
 	<script src="https://www.amcharts.com/lib/4/core.js"></script>
 	<script src="https://www.amcharts.com/lib/4/charts.js"></script>
 	<script src="https://www.amcharts.com/lib/4/themes/dark.js"></script>
