edit skill page

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<!-- Skill -->
 			<article id="skill">
 				<h2 class="major">Skill</h2>
-				<div id="chartdiv"></div>
+				<i class='fab fa-html5' style='font-size:100px'></i>
 			</article>
 
 			<!-- Project -->
