--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
 			<article id="skill">
 				<h2 class="major">Skill</h2>
 				<i class='fab fa-html5' style='font-size:100px'></i>
+				<i class='fab fa-node' style='font-size:100px'></i>
+				<i class='fab fa-python' style='font-size:100px'></i>
 			</article>
 
 			<!-- Project -->
