--- a/index.html
+++ b/index.html
@@ -59,9 +59,7 @@
 			<!-- Skill -->
 			<article id="skill">
 				<h2 class="major">Skill</h2>
-				<i class='fab fa-html5' style='font-size:100px'></i>
-				<i class='fab fa-node' style='font-size:100px'></i>
-				<i class='fab fa-python' style='font-size:100px'></i>
+				<div id="chartdiv"></div>
 			</article>
 
 			<!-- Project -->
