Add New message

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="cursor target">
                     HI! i'm WoodMan,
                     <!-- $setTypeInterval 500 -->
-                    <!-- $setTypeInterval 50 --> a wood learning the network technology.
+                    <!-- $setTypeInterval 50 --> a wood from Taiwan who loves writing codes.
                     <!-- $delay 2000 -->
                     <!-- $clear -->
 
@@ -34,9 +34,13 @@
                     <!-- $delay 2000 -->
                     <!-- $clear -->
 
+                    <!-- $type Currently a staff and programmer of OKTW. -->
+                    <!-- $delay 2000 -->
+                    <!-- $clear -->
+                    
                     <!-- $type I like to research and learn new technologies. -->
                     <!-- $delay 2000 -->
-
+                    
                     <!-- $reset -->
                 </p>
                 <button class="control play hide"></button>
