--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/brands.css" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/solid.css" rel="stylesheet" type="text/css" />
+    <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 </head>
 
 <body>
@@ -37,10 +38,10 @@
                     <!-- $type Currently a staff and programmer of OKTW. -->
                     <!-- $delay 2000 -->
                     <!-- $clear -->
-                    
+
                     <!-- $type I like to research and learn new technologies. -->
                     <!-- $delay 2000 -->
-                    
+
                     <!-- $reset -->
                 </p>
                 <button class="control play hide"></button>
@@ -82,7 +83,7 @@
         </section>
         <section class="skill">
             <div class="skill-inner">
-                <i class="fab fa-python fa-5x" style="color: #3a57cc"></i>
+                <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                 <h3>Python</h3>
                 <p class="text">
                     Python is an interpreted, high-level, general-purpose programming
@@ -92,18 +93,56 @@
         </section>
         <section class="skill">
             <div class="skill-inner">
-                <i class="fas fa-play-circle fa-5x" style="color: #383838"></i>
-                <h3>CI / CD</h3>
+                <span class="iconify" data-icon="logos-c-sharp" data-inline="false"></span>
+                <h3>C#</h3>
                 <p class="text">
-                    E.g. GitHub-Actions or Gitlab-CI and CircleCI
+                    C# is a general-purpose, multi-paradigm programming language encompassing strong typing, lexically scoped
                 </p>
             </div>
         </section>
         <section class="skill">
             <div class="skill-inner">
-                <i class="fas fa-server fa-5x" style="color: #383838"></i>
-                <h3>Server Manager</h3>
+                <span class="iconify" data-icon="logos-vue" data-inline="false"></span>
+                <h3>Vue.js</h3>
                 <p class="text">
+                    Vue.js is an open-source Model–view–viewmodel JavaScript framework for
+                    building user interfaces and single-page applications.
+                </p>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <span class="iconify" data-icon="logos-kotlin" data-inline="false"></span>
+                <h3>Kotlin</h3>
+                <p class="text">
+                    Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference.
+                </p>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <span class="iconify" data-icon="logos-mongodb" data-inline="false"></span>
+                <h3>MongoDB</h3>
+                <p class="text">
+                    MongoDB is a cross-platform document-oriented database program.
+                </p>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <span class="iconify" data-icon="logos-sqlite" data-inline="false"></span>
+                <h3>SQLite</h3>
+                <p class="text">
+                    SQLite is a relational database management system (RDBMS) contained in a C library
+                </p>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
+                <i class="fas fa-play-circle fa-5x" style="color: #383838"></i>
+                <h3>CI / CD</h3>
+                <p class="text">
+                    CI/CD or CICD generally refers to the combined practices of continuous integration and continuous delivery.
                 </p>
             </div>
         </section>
