Add progress bar

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     HTML is the standard markup language for documents designed to be
                     displayed in a web browser.
                 </p>
+                <div class="progress" style="width: 70%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -69,6 +70,7 @@
                     CSS is a style sheet language used for describing the presentation
                     of a document written in a markup language like HTML.
                 </p>
+                <div class="progress" style="width: 50%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -79,6 +81,7 @@
                     JavaScript is a high-level, interpreted scripting language that
                     conforms to the ECMAScript specification.
                 </p>
+                <div class="progress" style="width: 75%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -89,6 +92,7 @@
                     Python is an interpreted, high-level, general-purpose programming
                     language.
                 </p>
+                <div class="progress" style="width: 50%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -98,6 +102,7 @@
                 <p class="text">
                     C# is a general-purpose, multi-paradigm programming language encompassing strong typing, lexically scoped
                 </p>
+                <div class="progress" style="width: 60%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -108,6 +113,7 @@
                     Vue.js is an open-source Model–view–viewmodel JavaScript framework for
                     building user interfaces and single-page applications.
                 </p>
+                <div class="progress" style="width: 50%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -117,6 +123,7 @@
                 <p class="text">
                     Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference.
                 </p>
+                <div class="progress" style="width: 40%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -126,6 +133,7 @@
                 <p class="text">
                     MongoDB is a cross-platform document-oriented database program.
                 </p>
+                <div class="progress" style="width: 70%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -135,6 +143,7 @@
                 <p class="text">
                     SQLite is a relational database management system (RDBMS) contained in a C library
                 </p>
+                <div class="progress" style="width: 60%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -144,6 +153,7 @@
                 <p class="text">
                     CI/CD or CICD generally refers to the combined practices of continuous integration and continuous delivery.
                 </p>
+                <div class="progress" style="width: 70%;"></div>
             </div>
         </section>
     </section>
