Modify skill and message

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <!-- $delay 2000 -->
                     <!-- $clear -->
 
-                    <!-- $type Welcome to my webpage. -->
+                    <!-- $type I like to research and learn new technologies. -->
                     <!-- $delay 2000 -->
                     <!-- $clear -->
 
@@ -44,8 +44,8 @@
                     <!-- $delay 2000 -->
                     <!-- $clear -->
 
-                    <!-- $type I like to research and learn new technologies. -->
-                    <!-- $delay 2000 -->
+                    <!-- $type Mainly responsible for plug-in development, front-end development and CI/CD maintenance in OKTW. -->
+                    <!-- $delay 2500 -->
 
                     <!-- $reset -->
                 </p>
@@ -143,12 +143,12 @@
         </section>
         <section class="skill">
             <div class="skill-inner">
-                <span class="iconify" data-icon="logos-sqlite" data-inline="false"></span>
-                <h3>SQLite</h3>
+                <span class="iconify" data-icon="logos:git" data-inline="false"></span>
+                <h3>Git</h3>
                 <p class="text">
-                    SQLite is a relational database management system (RDBMS) contained in a C library
+                    Git is a distributed version-control system for tracking changes in source code during software development
                 </p>
-                <div class="progress" style="width: 60%;"></div>
+                <div class="progress" style="width: 50%;"></div>
             </div>
         </section>
         <section class="skill">
