--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta property="og:type" content="website">
     <meta property="og:description" content="Personal profile of WoodMan, a wood from Taiwan who loves writing codes.">
     <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.2/normalize.min.css" rel="stylesheet"
+        type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script src="https://code.iconify.design/1/1.0.3/iconify.min.js"></script>
 </head>
@@ -102,7 +103,8 @@
                 <span class="iconify" data-icon="logos-c-sharp" data-inline="false"></span>
                 <h3>C#</h3>
                 <p class="text">
-                    C# is a general-purpose, multi-paradigm programming language encompassing strong typing, lexically scoped
+                    C# is a general-purpose, multi-paradigm programming language encompassing strong typing, lexically
+                    scoped
                 </p>
                 <div class="progress" style="width: 60%;"></div>
             </div>
@@ -123,7 +125,8 @@
                 <span class="iconify" data-icon="logos-kotlin" data-inline="false"></span>
                 <h3>Kotlin</h3>
                 <p class="text">
-                    Kotlin is a cross-platform, statically typed, general-purpose programming language with type inference.
+                    Kotlin is a cross-platform, statically typed, general-purpose programming language with type
+                    inference.
                 </p>
                 <div class="progress" style="width: 40%;"></div>
             </div>
@@ -143,7 +146,8 @@
                 <span class="iconify" data-icon="logos:git" data-inline="false"></span>
                 <h3>Git</h3>
                 <p class="text">
-                    Git is a distributed version-control system for tracking changes in source code during software development
+                    Git is a distributed version-control system for tracking changes in source code during software
+                    development
                 </p>
                 <div class="progress" style="width: 50%;"></div>
             </div>
@@ -153,10 +157,51 @@
                 <span class="iconify" data-icon="ic:baseline-all-inclusive" data-inline="false"></span>
                 <h3>CI / CD</h3>
                 <p class="text">
-                    CI/CD or CICD generally refers to the combined practices of continuous integration and continuous delivery.
+                    CI/CD or CICD generally refers to the combined practices of continuous integration and continuous
+                    delivery.
                 </p>
                 <div class="progress" style="width: 70%;"></div>
             </div>
+        </section>
+    </section>
+
+    <section id="project" class="page project">
+        <h2>Project</h2>
+        <section class="work">
+            <a href="https://github.com/WoodManGitHub/Analysis_Bot_Web">
+                <div class="work-inner">
+                    <img src="./assets/workimg/analysis_web.png">
+                    <h3>Analys Bot Website</h3>
+                    <p class="text">
+                        Analysis discord voice online status.
+                        Use Vue.JS
+                    </p>
+                </div>
+            </a>
+        </section>
+        <section class="work">
+            <a href="https://github.com/WoodManGitHub/Analysis_Bot">
+                <div class="work-inner">
+                    <img src="./assets/workimg/analysis_bot.png">
+                    <h3>Analys Bot</h3>
+                    <p class="text">
+                        Record discord voice online status and web backen.
+                        Use TypeScript and Express.JS
+                    </p>
+                </div>
+            </a>
+        </section>
+        <section class="work">
+            <a href="https://github.com/WoodManGitHub/MyWeb">
+                <div class="work-inner">
+                    <img src="./assets/workimg/website.jpg">
+                    <h3>Website</h3>
+                    <p class="text">
+                        About me
+                        What you see now.
+                    </p>
+                </div>
+            </a>
         </section>
     </section>
 
@@ -177,7 +222,8 @@
         <h3>About this page</h3>
         <p>
             <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">
-                <img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png">
+                <img alt="創用 CC 授權條款" style="border-width:0"
+                    src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png">
             </a>
             <br>
             除另有註明，網站之內容皆由
