Add new project Modify skill progress

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     JavaScript is a high-level, interpreted scripting language that
                     conforms to the ECMAScript specification.
                 </p>
-                <div class="progress" style="width: 75%;"></div>
+                <div class="progress" style="width: 80%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -117,7 +117,7 @@
                     Vue.js is an open-source Model–view–viewmodel JavaScript framework for
                     building user interfaces and single-page applications.
                 </p>
-                <div class="progress" style="width: 50%;"></div>
+                <div class="progress" style="width: 30%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -128,7 +128,7 @@
                     Kotlin is a cross-platform, statically typed, general-purpose programming language with type
                     inference.
                 </p>
-                <div class="progress" style="width: 40%;"></div>
+                <div class="progress" style="width: 30%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -171,7 +171,7 @@
             <a href="https://github.com/WoodManGitHub/Analysis_Bot_Web">
                 <div class="work-inner">
                     <img src="./assets/workimg/analysis_web.png">
-                    <h3>Analys Bot Website</h3>
+                    <h3>Analysis Bot Website</h3>
                     <p class="text">
                         Analysis discord voice online status.
                         Use Vue.JS
@@ -183,9 +183,9 @@
             <a href="https://github.com/WoodManGitHub/Analysis_Bot">
                 <div class="work-inner">
                     <img src="./assets/workimg/analysis_bot.png">
-                    <h3>Analys Bot</h3>
+                    <h3>Analysis Bot</h3>
                     <p class="text">
-                        Record discord voice online status and web backen.
+                        Record discord voice online status and web backen. <br>
                         Use TypeScript and Express.JS
                     </p>
                 </div>
@@ -197,8 +197,30 @@
                     <img src="./assets/workimg/website.jpg">
                     <h3>Website</h3>
                     <p class="text">
-                        About me
-                        What you see now.
+                        About me <br>
+                        You are currently watching this.
+                    </p>
+                </div>
+            </a>
+        </section>
+        <section class="work">
+            <a href="https://github.com/OKTW-Network/mc.oktw.one">
+                <div class="work-inner">
+                    <img src="./assets/workimg/oktw_network.png">
+                    <h3>OKTW Offical Site</h3>
+                    <p class="text">
+                        Contributions: Wiki and News.
+                    </p>
+                </div>
+            </a>
+        </section>
+        <section class="work">
+            <a href="https://github.com/OKTW-Network/Live">
+                <div class="work-inner">
+                    <img src="./assets/workimg/oktw_live_records.png">
+                    <h3>OKTW Live Records Site</h3>
+                    <p class="text">
+                        Contributions: Function development.
                     </p>
                 </div>
             </a>
