Change href link

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <section id="project" class="page project">
         <h2>Project</h2>
         <section class="work">
-            <a href="https://github.com/WoodManGitHub/Analysis_Bot_Web">
+            <a href="https://analysis.woodman.pw">
                 <div class="work-inner">
                     <img src="./assets/workimg/analysis_web.png">
                     <h3>Analysis Bot Website</h3>
