--- a/index.html
+++ b/index.html
@@ -170,11 +170,16 @@
         <section class="work">
             <a href="https://analysis.woodman.pw">
                 <div class="work-inner">
+                    <div class="foreground">
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>Vue.JS</li>
+                        </ul>
+                    </div>
                     <img src="./assets/workimg/analysis_web.png">
                     <h3>Analysis Bot Website</h3>
                     <p class="text">
                         Analysis discord voice online status.
-                        Use Vue.JS
                     </p>
                 </div>
             </a>
@@ -182,11 +187,16 @@
         <section class="work">
             <a href="https://github.com/WoodManGitHub/Analysis_Bot">
                 <div class="work-inner">
+                    <div class="foreground">
+                        <ul>
+                            <li>TypeScript</li>
+                            <li>Express.JS</li>
+                        </ul>
+                    </div>
                     <img src="./assets/workimg/analysis_bot.png">
                     <h3>Analysis Bot</h3>
                     <p class="text">
-                        Record discord voice online status and web backen. <br>
-                        Use TypeScript and Express.JS
+                        Record discord voice online status and web backen.
                     </p>
                 </div>
             </a>
@@ -194,6 +204,13 @@
         <section class="work">
             <a href="https://github.com/WoodManGitHub/MyWeb">
                 <div class="work-inner">
+                    <div class="foreground">
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                        </ul>
+                    </div>
                     <img src="./assets/workimg/website.jpg">
                     <h3>Website</h3>
                     <p class="text">
@@ -206,6 +223,11 @@
         <section class="work">
             <a href="https://github.com/OKTW-Network/mc.oktw.one">
                 <div class="work-inner">
+                    <div class="foreground">
+                        <ul>
+                            <li>File maintenance</li>
+                        </ul>
+                    </div>
                     <img src="./assets/workimg/oktw_network.png">
                     <h3>OKTW Offical Site</h3>
                     <p class="text">
@@ -217,6 +239,12 @@
         <section class="work">
             <a href="https://github.com/OKTW-Network/Live">
                 <div class="work-inner">
+                    <div class="foreground">
+                        <ul>
+                            <li>JavaScript</li>
+                            <li>Vue.JS</li>
+                        </ul>
+                    </div>
                     <img src="./assets/workimg/oktw_live_records.png">
                     <h3>OKTW Live Records Site</h3>
                     <p class="text">
