--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <li>Vue.JS</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/analysis_web.png">
+                    <img src="./assets/workimg/analysis_web.jpg">
                     <h3>Analysis Bot Website</h3>
                     <p class="text">
                         Analysis discord voice online status.
@@ -228,7 +228,7 @@
                             <li>File maintenance</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/oktw_network.png">
+                    <img src="./assets/workimg/oktw_network.jpg">
                     <h3>OKTW Offical Site</h3>
                     <p class="text">
                         Contributions: Wiki and News.
