Add project info

--- a/index.html
+++ b/index.html
@@ -191,6 +191,7 @@
                         <ul>
                             <li>TypeScript</li>
                             <li>Express.JS</li>
+                            <li>MongoDB</li>
                         </ul>
                     </div>
                     <img src="./assets/workimg/analysis_bot.png">
