--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <li>Vue.JS</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/analysis_web.jpg">
+                    <img src="./assets/workimg/analysis_web.webp">
                     <h3>Analysis Bot Website</h3>
                     <p class="text">
                         Analysis discord voice online status.
@@ -194,7 +194,7 @@
                             <li>MongoDB</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/analysis_bot.png">
+                    <img src="./assets/workimg/analysis_bot.webp">
                     <h3>Analysis Bot</h3>
                     <p class="text">
                         Record discord voice online status and web backen.
@@ -212,7 +212,7 @@
                             <li>CSS</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/website.jpg">
+                    <img src="./assets/workimg/website.webp">
                     <h3>Website</h3>
                     <p class="text">
                         About me <br>
@@ -229,7 +229,7 @@
                             <li>File maintenance</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/oktw_network.jpg">
+                    <img src="./assets/workimg/oktw_network.webp">
                     <h3>OKTW Offical Site</h3>
                     <p class="text">
                         Contributions: Wiki and News.
@@ -246,7 +246,7 @@
                             <li>Vue.JS</li>
                         </ul>
                     </div>
-                    <img src="./assets/workimg/oktw_live_records.png">
+                    <img src="./assets/workimg/oktw_live_records.webp">
                     <h3>OKTW Live Records Site</h3>
                     <p class="text">
                         Contributions: Function development.
