--- a/index.html
+++ b/index.html
@@ -89,6 +89,17 @@
         </section>
         <section class="skill">
             <div class="skill-inner">
+                <span class="iconify" data-icon="logos:nodejs" data-inline="false"></span>
+                <h3>Node.JS</h3>
+                <p class="text">
+                    Node.js is an open-source, cross-platform, JavaScript runtime environment that executes JavaScript
+                    code outside of a browser
+                </p>
+                <div class="progress" style="width: 80%;"></div>
+            </div>
+        </section>
+        <section class="skill">
+            <div class="skill-inner">
                 <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                 <h3>Python</h3>
                 <p class="text">
@@ -106,7 +117,7 @@
                     C# is a general-purpose, multi-paradigm programming language encompassing strong typing, lexically
                     scoped
                 </p>
-                <div class="progress" style="width: 60%;"></div>
+                <div class="progress" style="width: 45%;"></div>
             </div>
         </section>
         <section class="skill">
@@ -117,18 +128,7 @@
                     Vue.js is an open-source Model–view–viewmodel JavaScript framework for
                     building user interfaces and single-page applications.
                 </p>
-                <div class="progress" style="width: 30%;"></div>
-            </div>
-        </section>
-        <section class="skill">
-            <div class="skill-inner">
-                <span class="iconify" data-icon="logos-kotlin" data-inline="false"></span>
-                <h3>Kotlin</h3>
-                <p class="text">
-                    Kotlin is a cross-platform, statically typed, general-purpose programming language with type
-                    inference.
-                </p>
-                <div class="progress" style="width: 30%;"></div>
+                <div class="progress" style="width: 45%;"></div>
             </div>
         </section>
         <section class="skill">
