Change project name to works

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         </section>
     </section>
 
-    <section id="project" class="page project">
-        <h2>Project</h2>
+    <section id="works" class="page works">
+        <h2>Works</h2>
         <section class="work">
             <a href="https://analysis.woodman.pw">
                 <div class="work-inner">
